# tutorial-sdk

./: .gitignore  404.html  NOTICE  README.md  index.html  mkdocs.yml  objects.inv  pyproject.toml  sitemap.xml
.github/workflows/: docs.yml  publish.yml  release.yml
api-example/: index.html
api-package/: index.html
api-public/: index.html
architecture/: index.html
assets/stylesheets/: extra.css
cli/: index.html
config-schema/: index.html
docs/: api-example.md  api-package.md  api-public.md  architecture.md  cli.md  config-schema.md  index.md
docs/assets/javascripts/: tables.js
search/: search_index.json
src/tutorial_sdk/: __init__.py  cli.py  config.py  errors.py  project.py  resolver.py  spec.py
src/tutorial_sdk/builder/: __init__.py  docker.py  local.py
src/tutorial_sdk/generator/: __init__.py  devcontainer.py  dockerfile.py  manifest.py
src/tutorial_sdk/plugins/: __init__.py
src/tutorial_sdk/runtime/: __init__.py  launcher.py
src/tutorial_sdk/scaffold/: __init__.py  constants.py  discovery.py  importer.py  templates.py
src/tutorial_sdk/validator/: __init__.py  assets.py  container.py  dependencies.py  notebooks.py  report.py
tests/: test_cli.py  test_cli_add.py  test_config.py  test_devcontainer_generator.py  test_dockerfile_generator.py  test_importer.py  test_local_builder.py  test_manifest_generator.py  test_resolver.py  test_runtime_launcher.py  test_scaffold.py  test_validator.py
